hphp/hack/test/typecheck/unused_awaitable12.php.exp
WARN: File "unused_awaitable12.php", line 11, characters 7-27:
This `is` check is always `false`. The expression on the left has type `Awaitable<int>` which shares no values with `NonAwaitable<nothing>`. (Warn[12010])
ERROR: File "unused_awaitable12.php", line 11, characters 7-8:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "unused_awaitable12.php", line 5, characters 21-34:
  This is why I think it is `Awaitable`
